fix the rapid definition align content

--- a/src/Sass/Bts.css
+++ b/src/Sass/Bts.css
@@ -45,6 +45,7 @@
 }
 .btsdefinitioncomponent{
     padding: 1rem;
+    align-content: center;
 }
 
 @media screen and (max-width: 736px) {
